--- a/washington_ml/foundations/Week 2/Predicting House Prices.ipynb
+++ b/washington_ml/foundations/Week 2/Predicting House Prices.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "train_data,test_data = sales.random_split(.8,seed=0)"
+    "train_data,test_data = sales.random_split(.8, seed=0)"
    ]
   },
   {
@@ -129,7 +129,11 @@
    },
    "outputs": [],
    "source": [
-    "sqft_model = graphlab.linear_regression.create(train_data, target='price', features=['sqft_living'],validation_set=None)"
+    "sqft_model = graphlab.linear_regression.create(\n",
+    "    train_data, \n",
+    "    target='price', \n",
+    "    features=['sqft_living'],\n",
+    "    validation_set=None)"
    ]
   },
   {
@@ -204,8 +208,12 @@
    },
    "outputs": [],
    "source": [
-    "plt.plot(test_data['sqft_living'],test_data['price'],'.',\n",
-    "        test_data['sqft_living'],sqft_model.predict(test_data),'-')"
+    "plt.plot(test_data['sqft_living'],\n",
+    "         test_data['price'],\n",
+    "         '.',\n",
+    "         test_data['sqft_living'],\n",
+    "         sqft_model.predict(test_data),\n",
+    "         '-')"
    ]
   },
   {
@@ -549,6 +557,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "postcode = '98039'\n",
+    "mean_price = sales.filter_by([postcode], 'zipcode')['price'].mean()\n",
+    "\n",
+    "print('Mean price: $%s' % mean_price)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def allowed_size(sqft):\n",
+    "    return 2000 < sqft <= 4000\n",
+    "\n",
+    "subset = sales[sales['sqft_living'].apply(allowed_size)]\n",
+    "fraction_included = float(len(subset)) / len(sales)\n",
+    "\n",
+    "print('Fraction included: %s' % fraction_included)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "advanced_features = [\n",
+    "'bedrooms', 'bathrooms', 'sqft_living', 'sqft_lot', 'floors', 'zipcode',\n",
+    "'condition', # condition of house\n",
+    "'grade', # measure of quality of construction\n",
+    "'waterfront', # waterfront property\n",
+    "'view', # type of view\n",
+    "'sqft_above', # square feet above ground\n",
+    "'sqft_basement', # square feet in basement\n",
+    "'yr_built', # the year built\n",
+    "'yr_renovated', # the year renovated\n",
+    "'lat', 'long', # the lat-long of the parcel\n",
+    "'sqft_living15', # average sq.ft. of 15 nearest neighbors\n",
+    "'sqft_lot15', # average lot size of 15 nearest neighbors \n",
+    "]\n",
+    "\n",
+    "advanced_features_model = graphlab.linear_regression.create(\n",
+    "    train_data,\n",
+    "    target='price',\n",
+    "    features=advanced_features,\n",
+    "    validation_set=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_features_results = my_features_model.evaluate(test_data)\n",
+    "print(my_features_results)\n",
+    "\n",
+    "advanced_features_results = advanced_features_model.evaluate(test_data)\n",
+    "print(advanced_features_results)\n",
+    "\n",
+    "print('\\nDifference in RMSE: %s' % (\n",
+    "    my_features_results['rmse'] - advanced_features_results['rmse']))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -560,9 +675,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "washington-ml",
    "language": "python",
-   "name": "python2"
+   "name": "washington-ml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -574,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
